[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/MusicPlayer/mplayer_osnova.png" type="Texture" id=1]
[ext_resource path="res://Songs/MusicPlayer/music_by_Alexey_sovest_inst.mp3" type="AudioStream" id=2]
[ext_resource path="res://Scripts/music_player.gd" type="Script" id=3]
[ext_resource path="res://Songs/MusicPlayer/music_by_Alexey_sdacha_inst.mp3" type="AudioStream" id=4]

[node name="music_player" type="Node2D"]
script = ExtResource( 3 )

[node name="MusicOsnova" type="TextureRect" parent="."]
margin_right = 300.0
margin_bottom = 196.0
rect_scale = Vector2( 2, 1.7 )
texture = ExtResource( 1 )
expand = true

[node name="ClickPlay" type="Button" parent="MusicOsnova"]
margin_left = 12.0
margin_right = 31.0
margin_bottom = 26.0
flat = true

[node name="ClickPause" type="Button" parent="MusicOsnova"]
margin_left = 33.0
margin_right = 50.0
margin_bottom = 26.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickBack" type="Button" parent="MusicOsnova"]
margin_left = 52.0
margin_right = 80.0
margin_bottom = 26.0
flat = true

[node name="ClickGo" type="Button" parent="MusicOsnova"]
margin_left = 82.0
margin_right = 110.0
margin_bottom = 26.0
flat = true

[node name="AudioStreamPlayerSdachaInst" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -11.0

[node name="AudioStreamPlayerSovestInst" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -11.0

[connection signal="pressed" from="MusicOsnova/ClickPlay" to="." method="_on_ClickPlay_pressed"]
[connection signal="pressed" from="MusicOsnova/ClickPause" to="." method="_on_ClickPause_pressed"]
[connection signal="pressed" from="MusicOsnova/ClickBack" to="." method="_on_ClickBack_pressed"]
[connection signal="pressed" from="MusicOsnova/ClickGo" to="." method="_on_ClickGo_pressed"]
